# portfolio-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: config.py  logging.py  main.py
dashboard/components/: health_indicator.py  kpi_cards.py  portfolio_selector.py  sidebar.py  sync_button.py
dashboard/pages/: 1_portfolio_overview.py  2_drift_rebalancing.py  3_portfolio_builder.py
dashboard/services/: api.py
dashboard/state/: portfolio_builder.py
